[Fix] Revise somes bugs.     * community buttons not clickable     * documentation menu collapsed after clicking     * search status always loading

--- a/src/views/Documentation/detail.scss
+++ b/src/views/Documentation/detail.scss
@@ -12,6 +12,10 @@
       width: 100%;
       height: 300px;
     }
+    .language-bash {
+      word-break: break-all;
+      white-space: break-spaces;
+    }
   }
   &-title {
     font-weight: 700;
